--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "bootstrap-datatables-example",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "How works browsersify, datatables and bootstrap works",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/ index.js"
+    "start": "node src/ index.js",
+    "dev": "nodemon src/ index.js",
+    "build":"browserify src/views/js/app.js -o src/public/js/bundle.js "
+  },
+  "nodemonConfig": {
+    "ignore": ["*.ejs"],
+    "events": {
+      "restart": "browserify src/views/js/app.js -o src/public/js/bundle.js"
+    }
   },
   "repository": {
     "type": "git",
@@ -19,10 +27,12 @@
   },
   "homepage": "https://github.com/jabin753/bootstrap-datatables-example#readme",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
   }
 }
