--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "bootstrap-datatables-example",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "How works browsersify, datatables and bootstrap works",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/ index.js",
     "dev": "nodemon src/ index.js",
-    "build":"browserify src/views/js/app.js -o src/public/js/bundle.js "
+    "build": "browserify src/views/js/table.js -o src/public/js/bundle.js "
   },
   "nodemonConfig": {
-    "ignore": ["*.ejs"],
+    "ignore": [
+      "*.ejs"
+    ],
     "events": {
       "restart": "browserify src/views/js/app.js -o src/public/js/bundle.js"
     }
@@ -30,6 +32,7 @@
     "bootstrap": "^4.1.3",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
+    "datatables.net-select": "^1.2.7",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
